--- a/project_training/template/src/App.css
+++ b/project_training/template/src/App.css
@@ -1,38 +1,42 @@
-.App {
+button {
+  border: 1;
+  cursor: pointer;
+}
+
+.food {
+  font-size: 3rem;
+  padding: 0.5em;
+  list-style: none;
+}
+
+.food-num {
+  width: 5rem;
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2.5rem;
+  margin-left: 0.5em;
+  margin-right: 0.8em;
+  background-color: palevioletred;
+  display: inline-block;
   text-align: center;
+  border-radius: 80%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.food-button {
+  font-size: 3.0rem;
+  margin: 0 0.1em;
+  background-color: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.food-button: hover {
+  opacity: 0.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.food-add,
+.food-decrease {
+  color: aqua
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.food-remove {
+  color: red
 }
